docs/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #00a700;
  --ifm-color-primary-dark: #009600;
  --ifm-color-primary-darker: #008e00;
  --ifm-color-primary-darkest: #007500;
  --ifm-color-primary-light: #00b800;
  --ifm-color-primary-lighter: #00c000;
  --ifm-color-primary-lightest: #00d900;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #20ff00;
  --ifm-color-primary-dark: #1de600;
  --ifm-color-primary-darker: #1bd900;
  --ifm-color-primary-darkest: #16b300;
  --ifm-color-primary-light: #36ff1a;
  --ifm-color-primary-lighter: #41ff26;
  --ifm-color-primary-lightest: #63ff4d;
  --docsearch-highlight-color: #16b300 !important;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.full-height {
  height: calc(100vh - var(--ifm-navbar-height));
}

@font-face {
  font-family: "Pixolletta8px";
  src:
    url("/fonts/Pixolletta8px.woff2") format("woff2"),
    url("/fonts/Pixolletta8px.woff") format("woff");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

.navbar__logo img {
  height: 50%;
}

.navbar__logo {
  margin-right: 0.25rem;
}

